org/kermeta/language/org.kermeta.language.checker/src/test/resources/resolved/invalid/Property/Property_derived_property_opposite_must_be_derived_002/.project
<?xml version="1.0" encoding="UTF-8"?>
<projectDescription>
	<name>Property_derived_property_opposite_must_be_derived_002</name>
	<comment></comment>
	<projects>
	</projects>
	<buildSpec>
	</buildSpec>
	<natures>
		<nature>org.kermeta.language.texteditor.eclipse.nature.KermetaNatureID</nature>
	</natures>
</projectDescription>
